k8s/base/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: ghcr.io/marienbaum77/auto-sec-gateway/manager:ae4541bb447e5b6255581a9efc1d1da017c23c30
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  namespace: prod
spec:
  selector:
    app: manager
  ports:
  - port: 80
    targetPort: 8080
